<resources>
    <string name="app_name">Praktek Constraint Layout</string>
    <string name="tEmail">Masukan Email :</string>
    <string name="tPassword">Masukan Password :</string>
    <string name="bsignin">LOGIN</string>
    <string name="tData">Data Anisa</string>
    <string name="txemail">Ini Hasil Email</string>
    <string name="txpassword">Ini Hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="tLogin">LOGIN</string>
    <string name="var1">Ini pesan</string>

    <string name="mDaftar">Belum Punya Akun ?</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukan Nama</string>
    <string name="eemail">Masukan Email</string>
    <string name="epassword">Masukan Password</string>
    <string name="erepass">Masukan Password lagi</string>
    <string name="ealamat">Masukan alamat</string>


    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Lihat Nomor</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem"> Nama Item </string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor telepon</string>

    <string name="pencarian">Masukan kata pencarian</string>

    <string name="belumdaftar">Belum Terdaftar?</string>
    <string name="judulpendaftaran">Pendaftaran</string>
    <string name="cnama">Masukan Nama</string>
    <string name="calamat">Masukan Alamat</string>
    <string name="cjkel">Jenis Kelamin</string>
    <string name="ccewek">Perempuan</string>
    <string name="claki">Laki-laki</string>
    <string name="cagama">Agama</string>
    <string name="cislam">Islam</string>
    <string name="ckristen">Krinsten</string>
    <string name="chindu">Hindu</string>
    <string name="cbudha">Budha</string>
    <string name="cprotestan">Protestan</string>
    <string name="ckonghucu">Konghucu</string>
    <string name="ckepercayaan">Kepercayaan</string>
    <string name="cbatal">Batal</string>
    <string name="cdaftar">Daftar</string>

    <string name="login">Welcome !</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="kontak">Contact</string>
</resources>